# LOJINEXTv2

./: .cursorrules  .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_FULL_REPO.md  BOOTSTRAP_PROMPT.txt  CERTIFICATION_REPORT.md  CLAUDE.md  DEEP_FORENSIC_CERTIFICATION.md  DEEP_HARDENING_CERTIFICATION.md  DEEP_PROJECT_ANALYSIS.md  MANIFEST.yaml  TRIP_SERVICE_ANALYSIS.md  TRIP_SERVICE_AUDIT_REPORT.md  TRIP_SERVICE_FORENSIC_REPORT.md  TRIP_SERVICE_PROD_READINESS.md  auth_output.txt  auth_two_output.txt  d  fix_auth.py  fix_trip_enum.py  inspect_db.py  mypy_report.txt  mypy_report_utf8.txt  mypy_report_v2.txt  mypy_report_v2_utf8.txt  mypy_report_v3.txt  mypy_report_v3_utf8.txt  mypy_report_v4.txt  mypy_report_v4_utf8.txt  platform_auth_testing.py  probe_location.py  probe_trip.py  pyproject.toml  ruff_report.txt  ruff_report_utf8.txt  setup_ai.bat
services/fleet-service/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  test_out.txt  tests_out.txt
services/fleet-service/alembic/: env.py
services/fleet-service/alembic/versions/: 001_schema_bootstrap.py  002_add_fleet_audit_log.py  003_final_forensic_parity.py  004_fleet_outbox_publishing_state.py  005_outbox_platform_standard_fields.py  006_fleet_timestamp_timezone.py  007_outbox_correlation_id.py  008_outbox_jsonb_trace_idx.py  4182cecbfaad_add_causation_id_to_fleet_outbox.py
services/fleet-service/k8s/base/: deployment.yaml  keda-scaledobject.yaml
services/fleet-service/src/fleet_service/: __init__.py  auth.py  broker.py  config.py  constraint_error_mapper.py  database.py  errors.py  main.py  middleware.py  models.py  observability.py  redis_client.py  timestamps.py  worker_heartbeats.py
services/fleet-service/tests/: __init__.py  conftest.py  test_phase1_verification.py
services/fleet-service/tests/contract/: test_concurrency.py  test_internal_contracts.py
services/fleet-service/tests/integration/: test_outbox.py  test_spec_versions.py  test_trailer_crud.py  test_vehicle_crud.py  test_worker_relay.py
services/fleet-service/tests/smoke/: test_smoke_probes.py
services/fleet-service/tests/unit/: test_broker_abstraction.py  test_config.py  test_etag_logic.py  test_formulas.py  test_lifecycle_transitions.py  test_plate_normalization.py
services/identity-service/: .env.example  Dockerfile  alembic.ini  debug_identity.db  pyproject.toml
services/identity-service/alembic/: env.py
services/identity-service/alembic/versions/: 001_initial_schema.py  002_add_signing_key_ciphertext_columns.py  003_backfill_signing_key_ciphertext.py  004_drop_plaintext_signing_key.py  005_add_outbox_and_audit.py  006_harden_outbox_schema.py  007_add_heartbeat_index.py  008_hardening_remediation.py  009_final_forensic_parity.py  010_security_hardening.py  011_outbox_canonical_fields.py  012_outbox_traceability_columns.py  013_outbox_trace_indexes.py  014_faza_1_identity_outbox.py  015_audit_log_jsonb_to_text.py  016_strip_auth_logic.py
services/identity-service/k8s/base/: deployment.yaml
services/identity-service/src/identity_service/: auth.py  blocklist.py  broker.py  config.py  crypto.py  database.py  errors.py  jwks.py  main.py  middleware.py  models.py  observability.py  password.py  redis_client.py  schemas.py  token_service.py  utils.py
services/identity-service/tests/: conftest.py  identity_test.db  test_auth.py  test_config.py  test_migrations.py  test_phase1_verification.py  test_security_boundary.py  test_stress.py  test_workers.py
services/location-service/: .env.example  Dockerfile  alembic.ini  full_pytest_output.txt  location_mypy.txt  pyproject.toml
services/location-service/alembic/: env.py
services/location-service/alembic/versions/: 0d5f12e97db6_remove_import_export.py  1a2b3c4d5e6f_outbox_claim.py  4d2b8c9e7f10_route_pair_live_uniqueness.py  7b1e9b8b2c6a_processing_run_claims.py  8cf4a955f5cf_add_causation_id_to_location_outbox.py  9f4e4fe14d8c_initial_schema.py  a2b3c4d5e6f7_hardening_remediation.py  b3c4d5e6f7a8_final_forensic_parity.py  c1d2e3f4a5b6_location_table_prefix.py  d1e2f3a4b5c6_location_outbox_canonical_fields.py  e1f2a3b4c5d6_merge_heads.py  e5f6a1b2c3d4_add_worker_heartbeats.py  f1a2b3c4d5e6_add_outbox_and_audit.py  l1o2c3t4i5o6_location_outbox_trace_indexes.py  l7o8c9t0i1o2_faza_1_location_outbox.py
services/location-service/k8s/base/: deployment.yaml  keda-scaledobject.yaml
services/location-service/src/location_service/: __init__.py  audit_helpers.py  auth.py  broker.py  config.py  database.py  enums.py  errors.py  (+9 more)
services/location-service/tests/: conftest.py  test_audit_findings.py  test_auth.py  test_config.py  test_contract.py  test_internal_contract.py  test_internal_routes.py  test_migrations.py  test_mock_pipeline.py  test_outbox_deep.py  test_outbox_schema.py  test_pairs_api.py  test_phase1_verification.py  test_phase2_verification.py  test_points_api.py  test_processing_flow.py  test_providers.py  test_route_versions_api.py  test_runtime.py  test_schema.py  test_schema_integration.py  test_unit.py  test_worker_heartbeats.py
services/telegram-service/: Dockerfile  pyproject.toml
services/telegram-service/tests/: conftest.py  test_clients.py  test_handlers.py  test_ocr.py  test_pdf.py
services/trip-service/: .dockerignore  .env.example  Dockerfile  TEST_EVIDENCE.md  alembic.ini  debug_outbox.py  out.txt  pyproject.toml  pytest_output.txt  pytest_output_2.txt  trip_mypy.txt
services/trip-service/alembic/: env.py
services/trip-service/scripts/: backfill_trip_status_drift.py
services/trip-service/tests/: __init__.py  bench_outbox_relay.py  conftest.py  test_audit_validation_deep.py  test_auth_deep.py  test_backfill_status_drift.py  test_broker_deep.py  test_config.py  test_contract.py  test_deep_verification.py  test_dependencies_deep.py  test_eda_hardening.py  test_entrypoints_deep.py  test_etag_robustness.py  test_http_clients_deep.py  test_integration.py  test_migrations.py  test_observability_deep.py  test_production_certification.py  test_reliability_deep.py  test_repo_cleanliness.py  test_runtime.py  test_timezones_deep.py  test_unit.py  test_workers.py
(+633 files in other folders)
