[project]
name = "lojinext-v2-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
workspace = { members = ["services/*", "packages/*"] }

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
