[project]
name = "lojinext-v2-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
workspace = { members = ["services/*", "packages/*"] }

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["build/", "alembic/", "tests/"]

[tool.pyright]
include = ["packages", "services"]
extraPaths = [
    "packages/platform-common/src",
    "packages/platform-auth/src",
    "services/auth-service/src",
    "services/identity-service/src",
    "services/trip-service/src",
    "services/driver-service/src",
    "services/fleet-service/src",
    "services/location-service/src",
    "services/telegram-service/src"
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
