[project]
name = "telegram-service"
version = "0.1.0"
description = "Telegram Service — Driver bot for slip submission (OCR) and PDF statement generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "PyJWT>=2.10.1",
    "aiogram>=3.10.0",
    "Pillow>=10.4.0",
    "pytesseract>=0.3.13",
    "reportlab>=4.2.0",
    "redis>=5.0.0",
    "platform-auth",
    "prometheus-client>=0.21.0",
]

[project.scripts]
telegram-api = "telegram_service.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = [
    "src",
    "../../packages/platform-auth/src",
    "../../packages/platform-auth/tests/support",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
