[project]
name = "trip-service"
version = "0.1.0"
description = "Trip Service — Greenfield microservice for trip lifecycle management (V8 spec)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-ulid>=3.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "prometheus-client>=0.20.0",
    "tzdata>=2024.1",
    "confluent-kafka>=2.13.2",
    "PyJWT>=2.10.1",
    "platform-auth",
    "platform-common",
    "redis>=7.2.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
]

[project.scripts]
trip-api = "trip_service.entrypoints.api:main"
trip-enrichment-worker = "trip_service.entrypoints.enrichment_worker:main"
trip-outbox-worker = "trip_service.entrypoints.outbox_worker:main"
trip-cleanup-worker = "trip_service.entrypoints.cleanup_worker:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "testcontainers[postgres]>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = [
    "src",
    "../../packages/platform-auth/src",
    "../../packages/platform-auth/tests/support",
    "../../packages/platform-common/src",
]
markers = [
    "unit: pure logic and branch-level tests",
    "contract: HTTP contract and auth boundary tests",
    "integration: end-to-end service behavior tests",
    "worker: background worker behavior tests",
    "reliability: concurrency and stress behavior tests",
    "runtime: process bootstrap and runtime wiring tests",
    "dbgate: real or ephemeral database gate tests",
]

[tool.uv.sources]
platform-auth = { workspace = true }
platform-common = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
